--- a/src/styles/components/_hits.scss
+++ b/src/styles/components/_hits.scss
@@ -57,7 +57,7 @@
         width: auto;
         margin: 0;
         padding: 0;
-        background-color: var(--af-is-white);
+        background-color: var(--af-is-common-white);
         border-radius: 4px;
 
         &-inner {
